# Aerial-Intelligence-OBB-Detector

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
aerial_detection/: __init__.py
aerial_detection/config/: __init__.py  defaults.py
aerial_detection/evaluation/: __init__.py  metrics.py
aerial_detection/geometry/: __init__.py  obb.py  rotated_iou.py  rotated_nms.py
aerial_detection/inference/: __init__.py  detection_merger.py  predictor.py  sahi_slicer.py
aerial_detection/models/: __init__.py  anchor_generator.py  backbone.py  fpn.py  heads.py  losses.py  rotated_retinanet.py
aerial_detection/scripts/: __init__.py  evaluate.py  inference.py  organize_dota.py  train.py
aerial_detection/utils/: __init__.py  io.py  visualization.py
tests/: __init__.py
tests/property/: __init__.py  test_anchor_properties.py  test_dataset_properties.py  test_iou_properties.py  test_nms_properties.py  test_obb_properties.py  test_sahi_properties.py  test_serialization_properties.py
